Player => Fix z-index

--- a/assets/scss/_player.scss
+++ b/assets/scss/_player.scss
@@ -3,6 +3,7 @@
 footer{
 	position:sticky;
 	bottom:0;
+	z-index: 101;
 }
 
 #player-spotify {
